NEW: 通过launch文件启动gazebo(还没调好如何传入参数)

--- a/src/my_package/CMakeLists.txt
+++ b/src/my_package/CMakeLists.txt
@@ -31,6 +31,21 @@ install(
   DESTINATION include/${PROJECT_NAME}
 )
 
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY urdf
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY worlds
+  DESTINATION share/${PROJECT_NAME}
+)
+
 ament_export_include_directories(include)
 
 if(BUILD_TESTING)
